feat:SA-54 to SA-57 #comment 카테고리 CRUD API 제작
