# server/src/config/api-docs/swagger.error.yaml
@@ -87,3 +87,14 @@ components:
               message:
                 type: string
                 example: 이메일 인증이 완료되지 않았습니다.
+
+    NotFoundError:
+      description: 리소스를 찾을 수 없습니다.
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+                example: 리소스를 찾을 수 없습니다.
